--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/new.png" alt=""></td>
+      <td><img src="Images/new.png" alt=""></td>
       <td><h1>Boshka Diaz</h1>
       <p><em>Aprendiz de <strong>Web Development</strong></em></p>
       <p>I am an aprentice of Web Development, I love coffee and I love my pets.</p></td>
